--- a/src/components/PriceList/priceList.scss
+++ b/src/components/PriceList/priceList.scss
@@ -6,38 +6,41 @@
     bottom: 0;
     width: 100%;
     z-index: 10;
-}
-.priceList__box {
-    position: relative;
-    width: 90%;
-    max-width: 1000px;
-    background: #fff;
-    margin: 15vh auto 0;
-    border-radius: 12px;
-    overflow: hidden;
-    padding: 20px;
-}
-.priceList__close {
-    position: absolute;
-    right: 10px;
-    top: 10px;
-    cursor: pointer;
-    width: 25px;
-    height: 25px;
-}
-.priceList__close > img {
-    width: 100%;
-    height: auto;
-    display: block;
-}
-.priceList__header {
-    margin-bottom: 20px;
-}
-.priceList__header > span {
-    font-size: 24px;
-    display: block;
-}
-.priceList__body {
-    overflow-y: overlay;
-    height: 500px;
+    &__box {
+        position: relative;
+        width: 90%;
+        max-width: 1200px;
+        background: #fff;
+        margin: 15vh auto 0;
+        border-radius: 12px;
+        overflow: hidden;
+        padding: 20px;
+    }
+    &__close {
+        position: absolute;
+        right: 10px;
+        top: 10px;
+        cursor: pointer;
+        width: 25px;
+        height: 25px;
+        img {
+            width: 100%;
+            height: auto;
+            display: block;
+        }
+    }
+    &__header {
+        margin-bottom: 20px;
+        span {
+            font-size: 24px;
+            display: block;
+        }
+    }
+    &__body {
+        overflow-y: overlay;
+        height: 500px;
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+    }
 }
