--- a/src/pages/Login/login.scss
+++ b/src/pages/Login/login.scss
@@ -54,4 +54,9 @@
             display: block;
         }
     }
+    &__loading {
+        background: #ccc !important;
+        display: flex;
+        justify-content: center;
+    }
 }
