--- a/src/components/AddLdpModal/addLdpModal.scss
+++ b/src/components/AddLdpModal/addLdpModal.scss
@@ -1,4 +1,4 @@
-.addLdpModal{
+.addLdpModal {
     position: fixed;
     background: rgba(0, 0, 0, 0.5);
     top: 0;
@@ -6,7 +6,7 @@
     bottom: 0;
     width: 100%;
     z-index: 10;
-    &__box{
+    &__box {
         position: relative;
         width: 90%;
         max-width: 400px;
@@ -15,13 +15,18 @@
         border-radius: 12px;
         overflow: hidden;
         padding: 10px 20px 20px 20px;
+        p {
+            text-align: center;
+            font-style: italic;
+            color: red;
+            font-size: 14px;
+        }
     }
-    &__title{
+    &__title {
         font-size: 24px;
         margin-bottom: 5px;
-    
     }
-    &__close{
+    &__close {
         position: absolute;
         right: 10px;
         top: 10px;
@@ -29,17 +34,18 @@
         width: 25px;
         height: 25px;
     }
-    &__close>img{
+    &__close > img {
         width: 100%;
         height: auto;
         display: block;
     }
-    &__body{
+    &__body {
         margin-bottom: 10px;
         display: flex;
         flex-direction: column;
         gap: 10px;
-        select,input{
+        select,
+        input {
             font-size: 14px;
             width: 100%;
             padding: 5px 10px;
@@ -47,13 +53,12 @@
             border-radius: 9px;
             outline: none;
         }
-      
     }
-    &__footer{
+    &__footer {
         display: flex;
-      
+
         justify-content: flex-end;
-        button{
+        button {
             border-radius: 20px;
             border: none;
             padding: 7px 20px;
@@ -62,13 +67,9 @@
             background: #fff;
             font-size: 16px;
             transition: all 0.2s linear;
-            &:hover{
-                background: #f5f8fd
-                }
+            &:hover {
+                background: #f5f8fd;
+            }
         }
     }
 }
-
-
-
-
