--- a/src/components/PriceList/priceList.scss
+++ b/src/components/PriceList/priceList.scss
@@ -1,159 +1,159 @@
 .priceList {
-  position: fixed;
-  background: rgba(0, 0, 0, 0.5);
-  top: 0;
-  left: 0;
-  bottom: 0;
-  width: 100%;
-  z-index: 10;
-  &__box {
-    position: relative;
-    width: 90%;
-    max-width: 1200px;
-    background: #fff;
-    margin: 15vh auto 0;
-    border-radius: 12px;
-    overflow: hidden;
-    padding: 20px;
-  }
-  &__close {
-    position: absolute;
-    right: 10px;
-    top: 10px;
-    cursor: pointer;
-    width: 25px;
-    height: 25px;
-    img {
-      width: 100%;
-      height: auto;
-      display: block;
-    }
-  }
-  &__header {
-    margin-bottom: 20px;
-    span {
-      font-size: 24px;
-      display: block;
-    }
-  }
-  &__body {
-    overflow-y: overlay;
-    height: 50vh;
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    margin: 15px 0;
-    padding: 0 0 15px;
-  }
-  &__addItem {
-    position: relative;
-    align-items: center;
-    background: #fff;
-    border-radius: 9px;
-    box-shadow: 0 1px 5px 0 rgba(0, 0, 0, 0.2);
-    color: #686868;
-    display: flex;
-    gap: 10px;
-    justify-content: space-between;
-    margin: 0 auto;
-    padding: 5px 20px 5px 20px;
-    width: 99%;
-    ul {
-      width: 100%;
-      align-items: center;
-      display: flex;
-      gap: 20px;
-      list-style: none;
-      margin: 0;
-      padding: 0;
-      li {
-        white-space: nowrap;
-        overflow: hidden;
-        text-overflow: ellipsis;
-        input {
-          width: 100%;
-          -moz-appearance: textfield;
-          padding: 3px 5px;
-          border: none;
-          border-bottom: 1px solid #ccc;
-        }
-        input:disabled {
-          background: none;
-          border: none;
-        }
-        input::-webkit-outer-spin-button,
-        input::-webkit-inner-spin-button {
-          -webkit-appearance: none;
-          margin: 0;
-        }
-      }
-    }
-  }
-  &__addBtn {
-    align-items: center;
-    display: flex;
-    justify-content: center;
+    position: fixed;
+    background: rgba(0, 0, 0, 0.5);
+    top: 0;
+    left: 0;
+    bottom: 0;
     width: 100%;
-    button {
-      background: #fff;
-      border: none;
-      border-radius: 12px;
-      color: #1961d3;
-      cursor: pointer;
-      padding: 5px 10px;
-      transition: all 0.2s linear;
+    z-index: 10;
+    &__box {
+        position: relative;
+        width: 90%;
+        max-width: 1200px;
+        background: #fff;
+        margin: 15vh auto 0;
+        border-radius: 12px;
+        overflow: hidden;
+        padding: 20px 20px 30px;
     }
-  }
-  &__name {
-    width: 25%;
-  }
-  &__price {
-    width: 11%;
-  }
-  &__percent {
-    width: 7%;
-    max-width: 65px;
-  }
-  &__discount {
-    width: 11%;
-  }
-  &__promotion {
-    width: 20%;
-  }
-  &__description {
-    width: 20%;
-    input {
-      width: 70% !important;
+    &__close {
+        position: absolute;
+        right: 10px;
+        top: 10px;
+        cursor: pointer;
+        width: 25px;
+        height: 25px;
+        img {
+            width: 100%;
+            height: auto;
+            display: block;
+        }
     }
-  }
-  &__action {
-    display: flex;
-    gap: 12px;
-    justify-content: center;
-    position: absolute;
-    right: 12px;
-    top: 50%;
-    transform: translateY(-50%);
-    button {
-      border: none;
-      cursor: pointer;
-      display: block;
-      height: 22px;
-      transition: all 0.2s linear;
-      width: 22px;
+    &__header {
+        margin-bottom: 20px;
+        span {
+            font-size: 24px;
+            display: block;
+        }
     }
-  }
-  &__save {
-    background: url(../../assets/icons/check-icon.svg) center 0 no-repeat;
-    background-size: 100%;
-  }
-  &__cancel {
-    background: url(../../assets/icons/closeActive-icon.svg) center 0 no-repeat;
-    background-size: 100%;
-  }
-  &__loading {
-    display: flex;
-    justify-content: center;
-    margin-bottom: 20px;
-  }
+    &__body {
+        overflow-y: overlay;
+        height: 45vh;
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+        margin: 15px 0;
+        padding: 2px 0 10px;
+    }
+    &__addItem {
+        position: relative;
+        align-items: center;
+        background: #fff;
+        border-radius: 9px;
+        box-shadow: 0 1px 5px 0 rgba(0, 0, 0, 0.2);
+        color: #686868;
+        display: flex;
+        gap: 10px;
+        justify-content: space-between;
+        margin: 0 auto;
+        padding: 5px 20px 5px 20px;
+        width: 99%;
+        ul {
+            width: 100%;
+            align-items: center;
+            display: flex;
+            gap: 20px;
+            list-style: none;
+            margin: 0;
+            padding: 0;
+            li {
+                white-space: nowrap;
+                overflow: hidden;
+                text-overflow: ellipsis;
+                input {
+                    width: 100%;
+                    -moz-appearance: textfield;
+                    padding: 3px 5px;
+                    border: none;
+                    border-bottom: 1px solid #ccc;
+                }
+                input:disabled {
+                    background: none;
+                    border: none;
+                }
+                input::-webkit-outer-spin-button,
+                input::-webkit-inner-spin-button {
+                    -webkit-appearance: none;
+                    margin: 0;
+                }
+            }
+        }
+    }
+    &__addBtn {
+        align-items: center;
+        display: flex;
+        justify-content: center;
+        width: 100%;
+        button {
+            background: #fff;
+            border: none;
+            border-radius: 12px;
+            color: #1961d3;
+            cursor: pointer;
+            padding: 5px 10px;
+            transition: all 0.2s linear;
+        }
+    }
+    &__name {
+        width: 25%;
+    }
+    &__price {
+        width: 11%;
+    }
+    &__percent {
+        width: 7%;
+        max-width: 65px;
+    }
+    &__discount {
+        width: 11%;
+    }
+    &__promotion {
+        width: 20%;
+    }
+    &__description {
+        width: 20%;
+        input {
+            width: 70% !important;
+        }
+    }
+    &__action {
+        display: flex;
+        gap: 12px;
+        justify-content: center;
+        position: absolute;
+        right: 12px;
+        top: 50%;
+        transform: translateY(-50%);
+        button {
+            border: none;
+            cursor: pointer;
+            display: block;
+            height: 22px;
+            transition: all 0.2s linear;
+            width: 22px;
+        }
+    }
+    &__save {
+        background: url(../../assets/icons/check-icon.svg) center 0 no-repeat;
+        background-size: 100%;
+    }
+    &__cancel {
+        background: url(../../assets/icons/closeActive-icon.svg) center 0 no-repeat;
+        background-size: 100%;
+    }
+    &__loading {
+        display: flex;
+        justify-content: center;
+        margin-bottom: 20px;
+    }
 }
