--- a/src/components/ExtensionList/extensionList.scss
+++ b/src/components/ExtensionList/extensionList.scss
@@ -14,7 +14,7 @@
     margin: 15vh auto 0;
     border-radius: 12px;
     overflow: hidden;
-    padding: 15px 20px 30px;
+    padding: 15px 20px 25px;
   }
   &__header {
     margin-bottom: 15px;
@@ -23,6 +23,7 @@
       display: block;
     }
   }
+
   &__close {
     position: absolute;
     right: 10px;
@@ -37,17 +38,89 @@
     }
   }
   &__body {
-    height: 50vh;
+    height: 40vh;
     overflow-y: auto;
+    margin-bottom: 15px;
   }
   &__head {
     display: flex;
-    background: #ebebeb;
     padding: 5px 10px;
-    margin-bottom: 10px;
+    margin-bottom: 15px;
+    background: #fff;
+    border-radius: 6px;
+    box-shadow: 0 1px 5px 0 rgba(0, 0, 0, 0.2);
+    color: #686868;
+  }
+  &__addNew {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 36px;
+    padding: 5px 10px;
+    background: #fff;
+    border-radius: 6px;
+    box-shadow: 0 1px 5px 0 rgba(0, 0, 0, 0.2);
+    color: #686868;
+    font-weight: 600;
+    cursor: pointer;
   }
   &__title {
-    width: 50%;
+    width: 48%;
     font-weight: 600;
+  }
+  &__item {
+    position: relative;
+    display: flex;
+    background: #fff;
+    padding: 7px 10px;
+    border-radius: 6px;
+    box-shadow: 0 1px 5px 0 rgba(0, 0, 0, 0.2);
+    color: #686868;
+  }
+  &__text {
+    width: 48%;
+    span {
+      font-weight: 600;
+      display: block;
+      margin-bottom: 5px;
+    }
+  }
+  &__input {
+    display: flex;
+    align-items: flex-end;
+    gap: 5px;
+    width: fit-content;
+    input {
+      width: 35px;
+      border: none;
+      border-bottom: 1px solid #ccc;
+      background: transparent;
+      font-size: 14px;
+      padding: 0;
+    }
+  }
+  &__action {
+    position: absolute;
+    bottom: 7px;
+
+    right: 10px;
+    display: flex;
+    gap: 10px;
+    button {
+      border: none;
+      cursor: pointer;
+      display: block;
+      height: 19px;
+      width: 19px;
+      transition: all 0.2s linear;
+    }
+  }
+  &__save {
+    background: url(../../assets/icons/check-icon.svg) center 0 no-repeat;
+    background-size: 100%;
+  }
+  &__cancel {
+    background: url(../../assets/icons/closeActive-icon.svg) center 0 no-repeat;
+    background-size: 100%;
   }
 }
