--- a/src/components/ExtensionList/extensionList.scss
+++ b/src/components/ExtensionList/extensionList.scss
@@ -6,6 +6,11 @@
   bottom: 0;
   width: 100%;
   z-index: 10;
+  &__loading {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
   &__box {
     position: relative;
     width: 90%;
