--- a/src/components/ExtensionItem/extensionItem.scss
+++ b/src/components/ExtensionItem/extensionItem.scss
@@ -56,4 +56,7 @@
     background: url(../../assets/icons/closeActive-icon.svg) center 0 no-repeat;
     background-size: 100%;
   }
+  &__error {
+    border-color: red !important;
+  }
 }
