--- a/src/components/CategoryList/categoryList.scss
+++ b/src/components/CategoryList/categoryList.scss
@@ -20,6 +20,7 @@
     border-radius: 12px;
     overflow: hidden;
     padding: 15px 20px 25px;
+    box-shadow: 1px 1px 10px 5px rgba(0, 0, 0, 0.1);
   }
   &__header {
     margin-bottom: 15px;
