--- a/src/components/AddLdpModal/addLdpModal.scss
+++ b/src/components/AddLdpModal/addLdpModal.scss
@@ -15,6 +15,7 @@
     border-radius: 12px;
     overflow: hidden;
     padding: 15px 20px 20px 20px;
+    box-shadow: 1px 1px 10px 5px rgba(0, 0, 0, 0.1);
     p {
       text-align: center;
       font-style: italic;
